--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "scraper.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "nodemon server.js"
   },
   "author": "",
@@ -14,7 +14,6 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.7",
     "nodemon": "^2.0.4",
     "puppeteer": "^5.3.0",
     "request": "^2.88.2"
