--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4",
-    "puppeteer": "^5.3.0",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.4"
   }
 }
